samples/_failures_safe/1761511687_0e834f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4d8ea2f.c: In function ‘main’:
./samples/SAFE/__tmp_a4d8ea2f.c:155:12: error: missing terminating " character
  155 |     printf("Enter edges (from to weight):\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a4d8ea2f.c:155:5: error: expected expression at end of input
  155 |     printf("Enter edges (from to weight):\n
      |     ^~~~~~
./samples/SAFE/__tmp_a4d8ea2f.c:155:5: error: expected declaration or statement at end of input
